LinuxPlumbers2022: Disclaimer for BTF intro
I will likely skip over these slides in physical presentation.
As I assume LPC crowd already knows these details.

The code slide might be illustrative of how BPF-prog
gets access to these BTF IDs.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
+++ b/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
@@ -58,6 +58,9 @@ NIC *hardware* provides offload hints in RX (and TX) *descriptors*
 
 * Slide: Introducing BTF - BPF Type Format                           :export:
 
+*/Assume LPC crowd knows what BTF is/*
+ - Slides are here primarily for people downloading these later
+
 [[https://www.kernel.org/doc/html/latest/bpf/btf.html][BTF]] compact Type Format (based on compiler's DWARF debug type info)
  - Great [[https://facebookmicrosites.github.io/bpf/blog/2018/11/14/btf-enhancement.html][blogpost]] by Andrii Nakryiko
    - 124MB of DWARF data compressed to 1.5MB compact BTF type data
