--- a/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
+++ b/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
@@ -157,6 +157,55 @@ Issue: BTF *type* /IDs/ are */not unique/* (32-bit)
 Construct /unique/: *Full* /BTF ID/ (64-bit)
  - via combining: BTF *object* and *type* ID
 
+* Slide: Back to XDP-hints                                           :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+Back to /XDP-hints/ and /XDP/ *metadata* /area/
+
+** Slide: XDP metadata requirements                                 :export:
+
+XDP metadata area has some *properties*
+ - *Grows "backwards"* from where packets starts
+ - Must be 4 byte aligned
+ - Limited size (currently) 32 bytes
+
+BPF-prog can expand/grow area via helper: /=bpf_xdp_adjust_meta=/
+ - pkt-data pointers are invalidated after calling this
+ - /Verifier/ requires *boundary checks* to access metadata area
+
+Common gotcha: Compiler likes to pad C-struct ending
+ - Avoid/fix via: *=__attribute__((packed))=*
+
+** Slide: Expected *users* of the XDP-hints                         :export:
+
+/Users/consumers/ of XDP-hints in *BTF layout*
+ - *BPF-progs* first obvious consumer (either XDP or TC hooks)
+ - *XDP to SKB* conversion (in veth and cpumap) for traditional HW offloads
+   - e.g. RX-hash, RX-checksum, VLAN, RX-timestamp
+   - Can potentially /simplify NIC drivers significantly/
+ - *Chained* /BPF-progs/ can *communicate state* via metadata
+ - *AF_XDP* can consume /BTF/ info in userspace to /decode metadata area/
+
+** Slide: Motivation for XDP to SKB conversion                      :export:
+
+*Moonshot*: /NIC drivers without SKB knowledge/
+ - End-goal with XDP to SKB conversion
+ - Make it possible to write NIC drivers Ethernet L2 "only"
+
+Goal: /Avoids/ taking the SKB *"socket" overhead* at driver level
+ - When early netstack layer 2/3 processing xdp_frames
+   - Possible to speedup Linux bridging and routing
+
+** Slide: Hardware motivation and considerations                    :export:
+
+/Goal/: *Hardware* should *produce XDP-hints*
+ - Possible for HW as DMA area next to metadata
+
+Consider defining Endianess: Big vs Little endian
+ - In XDP-hints struct layout
+ - Given /BTF is flexible/, can be *added later* when HW appears
 
 * Slide: End: /Questions?/                                         :noexport:
 :PROPERTIES:
