--- a/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
+++ b/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
@@ -215,27 +215,27 @@ Consider defining Endianess: Big vs Little endian
 *Design not fully done* yet
  - Upstream interaction will likely change solution anyhow
 
-** Slide: Solution(A): /Decouple/ with *btf_id* /in metadata/       :export:
+** Slide: Step#1: /Decouple/ with *btf_id* /in metadata/            :export:
 
 Place /full/ *"btf_id" value* /inside metadata/ area, *as last member*
  - last member: due to "grows" backwards, important *for AF_XDP* /decoding/
  - Extend /=xdp_buff=/ + /=xdp_frame=/ (+AF_XDP) with flags that BTF is "enabled"
    - */Notice/*: Full BTF ID identify which module via BTF object ID
 
-This achieves /decoupling via btf_id/ as it becomes *struct's "version"* number
+This achieves *decoupling* /via btf_id/ as it becomes *struct's "version"* number
  - /Pros/: Easy to handle different /layout per pkt/
-   - as BPF-prog (or AF_XDP) can /multiplex on btf_ids/ known to "them"
+   - as BPF-prog (or AF_XDP) can /multiplex on btf_id's/ known to "them"
  - */Cons/*: *XDP to SKB* conversion */harder/* as kernel cannot trust btf_id
    - Given BPF-prog can overwrite ID in metadata area
 
-** Slide: Solution(B): Extend with common struct                    :export:
+** Slide: Step#2: Extend with common struct                         :export:
 
 Create /=xdp_hints_common=/ struct with netstack known hints
  - Still place *"btf_full_id" value* /inside metadata/ area, *as last member*
  - Extend /=xdp_buff=/ with *flag*: "compat with common hints"
  - Helps *XDP to SKB* use-case
 
-Userspace MUST not consider this common struct UAPI
+Userspace /MUST/ *not consider this common struct* */UAPI/*
  - Kernel can change this anytime
  - Userspace MUST use BTF info to decode layout
 
@@ -243,8 +243,6 @@ This is proposal in RFC v2 patchset
  - [[https://lore.kernel.org/bpf/166256538687.1434226.15760041133601409770.stgit@firesoul/T/#t][[RFCv2] XDP-hints: XDP gaining access to HW offload hints via BTF]]
 
 ** Slide: Layout of xdp_hints_common                                :export:
-
-
 
 #+begin_src C
 struct xdp_hints_common {
@@ -263,10 +261,12 @@ struct xdp_hints_common {
 } __attribute__((aligned(4))) __attribute__((packed));
 #+end_src
 
-Member /=xdp_hints_flags=/ is further described via
+Member /=xdp_hints_flags=/ is further 'described' via
  - BTF type *=enum xdp_hints_flags=*
 
-** Slide: BTF type enum xdp_hints_flags
+** Slide: BTF type enum xdp_hints_flags                             :export:
+
+*/Not UAPI/*: BPF-prog + userspace MUST decode via BTF
 
 #+begin_src C
 enum xdp_hints_flags {
@@ -288,7 +288,6 @@ enum xdp_hints_flags {
 };
 #+end_src
 
-*/Not UAPI/*: BPF-prog + userspace MUST decode via BTF
 
 * Slide: End: /Questions?/                                         :noexport:
 :PROPERTIES:
