LinuxPlumbers2022: Update end-slide with resource links
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
+++ b/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
@@ -349,6 +349,12 @@ Complications: /metadata grows/ *backwards*
 :reveal_extra_attr: class="mid-slide"
 :END:
 
+Resources:
+ - XDP-project - [[https://github.com/xdp-project/][GitHub.com/xdp-project]]
+   - Get an easy start with [[https://github.com/xdp-project/bpf-examples][xdp-project/bpf-examples]]
+ - XDP-hints mailing list: *xdp-hints* /@/ *xdp-project.net*
+   - https://lists.xdp-project.net/
+
 * Emacs end-tricks                                                 :noexport:
 
 This section contains some emacs tricks, that e.g. remove the "Slide:" prefix
