--- a/conference/LinuxPlumbers2022/xdp-queueing.org
+++ b/conference/LinuxPlumbers2022/xdp-queueing.org
@@ -30,18 +30,77 @@ Colors are choosen via org-mode italic/bold high-lighting:
 :reveal_extra_attr: class="img-slide"
 :END:
 
-#+ATTR_html: :height 700
+#+ATTR_html: :height 720
 [[file:talk-about-queueing.jpg]]
 
+* Review: How does XDP_REDIRECT work?                                :export:
+
+1. /Program/ calls =bpf_redirect_map()=, returning =XDP_REDIRECT=
+  - Helper sets per-cpu fields in =struct bpf_redirect_info=
+2. *Driver* calls =xdp_do_redirect()=
+  - Converts =xdp_buff= to =xdp_frame=, calls /*map type enqueue function*/
+  - Buffers frame in destination map (up to =XDP_BULK_QUEUE_SIZE= (16) pkts)
+3. *Driver* calls =xdp_do_flush()= at end of NAPI
+  - Flushes buffered packets
+
+Adding new redirect types requires /*no driver changes*/.
+
+* Why does XDP need queueing?                                        :export:
+
+#+ATTR_html: :height 500
+#+CAPTION: 100->10 Gbps rate transition, 10ms base RTT
+[[file:tcp_1up_-_Linux_vs_XDP_forwarding.png]]
+
+
+* The ingredients of queueing
+- Somewhere to store packets
+- A way to pull the packets back out
+
+* Review: How does the networking stack do this?
+- Qdiscs
+- Watchdog wakeup (TX scheduling)
+
+* A way to store packets: A new BPF map                              :export:
+#+begin_quote
+"Bad programmers worry about the code. Good programmers worry about data
+structures and their relationships."
+
+Linus Torvalds in https://lwn.net/Articles/193245/
+#+end_quote
+
+* Detour: EDT packet scheduling
+Turns out we can represent lots of packet scheduling algorithms using
+time-based scheduling (sch_fq, etc)
+
+So we need a priority queue
+
+* Slide:                                                             :export:
+#+ATTR_html: :height 720
+[[file:pifo-performance.svg]]
+
+* Slide:                                                             :export:
+#+ATTR_html: :height 720
+[[file:pifo-performance-timer.svg]]
+* A way to get the packets out: TX scheduling
+
+Idea: re-use ndo_xdp_xmit()
+
+* Attempt 1: TX hook
+
+* Attempt 2: Send helper
+
+* Fixing performance?
+- New callback scheduling?
+
+* Unsolved problem: Pushback from driver
+- How to get this
 
 * Slide: End: /Questions?/                                         :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
 
-Why not try out XDP live packet mode yourself? What else can we use it for?
-
-XDP-tools: [[https://github.com/xdp-project/xdp-tools][github.com/xdp-project/xdp-tools]]
+[[https://git.kernel.org/pub/scm/linux/kernel/git/toke/linux.git/log/?h=xdp-queueing-07][https://git.kernel.org/pub/scm/linux/kernel/git/toke/linux.git/log/?h=xdp-queueing-07]]
 
 * Emacs end-tricks                                                 :noexport:
 
