LinuxPlumbers2022: Better use the conf announced title
Forgot to use the offical title talk was submitted under.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
+++ b/conference/LinuxPlumbers2022/xdp-hints-lpc2022.org
@@ -1,5 +1,5 @@
 # -*- fill-column: 79; -*-
-#+TITLE: XDP hints via BPF Type Format (BTF) system
+#+TITLE: XDP gaining access to NIC hardware hints via BTF
 #+AUTHOR: Jesper Dangaard Brouer <hawk@kernel.org>
 #+EMAIL: brouer@redhat.com
 #+REVEAL_THEME: redhat
@@ -39,7 +39,7 @@ XDP /metadata area/ avail since [[https://www.spinics.net/lists/netdev/msg456525
 
 Main reason XDP-hints work *stalled*
  - */No consensus/* on *layout* of XDP metadata
- - /BTF/ was *not ready* at that time
+ - /BTF/ was *not ready* at that time (BPF Type Format)
 
 * Slide: What are *traditional* hardware offload hints?              :export:
 
